--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Fisch_Package.CatchLog">
-  <grid id="27dc6" binding="CatchLog" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="CatchLog" layout-manager="GridLayoutManager" row-count="4" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="869" height="400"/>
+      <xy x="20" y="20" width="857" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="eb47b" class="javax.swing.JLabel" binding="fischart_label">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Fischart"/>
@@ -18,7 +18,7 @@
       </component>
       <component id="fe7c4" class="javax.swing.JLabel" binding="datum_label">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Datum"/>
@@ -28,11 +28,35 @@
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <model>
+            <item value=""/>
+            <item value="Aal"/>
+            <item value="Barsch"/>
+            <item value="Brasse"/>
+            <item value="Döbel"/>
+            <item value="Forelle"/>
+            <item value="Hecht"/>
+            <item value="Karausche"/>
+            <item value="Karpfen"/>
+            <item value="Laube"/>
+            <item value="Nase"/>
+            <item value="Renke"/>
+            <item value="Rotauge"/>
+            <item value="Rotfeder"/>
+            <item value="Rutte"/>
+            <item value="Saibling"/>
+            <item value="Schleie"/>
+            <item value="Seeforelle"/>
+            <item value="Wels"/>
+            <item value="Zander"/>
+            <item value="+ Eigene Fischart hinzufügen"/>
+          </model>
+        </properties>
       </component>
       <component id="deacd" class="javax.swing.JLabel" binding="groeße_label">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Größe (cm)"/>
@@ -40,7 +64,7 @@
       </component>
       <component id="dbb3b" class="javax.swing.JLabel" binding="ort_label">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Ort"/>
@@ -48,7 +72,7 @@
       </component>
       <component id="fcfc7" class="javax.swing.JTextField" binding="datum_textfeld">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -56,7 +80,7 @@
       </component>
       <component id="71a89" class="javax.swing.JTextField" binding="groeße_textfeld">
         <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -64,7 +88,7 @@
       </component>
       <component id="b0309" class="javax.swing.JTextField" binding="ort_textfeld">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -72,7 +96,7 @@
       </component>
       <component id="788e1" class="javax.swing.JLabel" binding="gewicht_label">
         <constraints>
-          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Gewicht (gramm)"/>
@@ -80,7 +104,7 @@
       </component>
       <component id="3596d" class="javax.swing.JTextField" binding="gewicht_textfeld">
         <constraints>
-          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="5" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -88,7 +112,7 @@
       </component>
       <component id="faaa" class="javax.swing.JButton" binding="eintragen_button">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Eintragen"/>
@@ -96,7 +120,7 @@
       </component>
       <component id="6bd40" class="javax.swing.JLabel" binding="gefangen_label">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Gefangen?"/>
@@ -104,7 +128,7 @@
       </component>
       <component id="761e3" class="javax.swing.JRadioButton" binding="gefanngen_jradiobutton">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
@@ -112,7 +136,7 @@
       </component>
       <component id="2109b" class="javax.swing.JButton" binding="auswahlLöschen_jbutton">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Auswahl löschen"/>
@@ -120,10 +144,21 @@
       </component>
       <component id="3263" class="javax.swing.JButton" binding="fangbuchAnzeigenButton" default-binding="true">
         <constraints>
-          <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Fangbuch anzeigen"/>
+        </properties>
+      </component>
+      <component id="10b1b" class="javax.swing.JTextField" binding="neueFischart_textfeld">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+          <visible value="false"/>
         </properties>
       </component>
     </children>
