--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -142,7 +142,7 @@
           <text value="Auswahl löschen"/>
         </properties>
       </component>
-      <component id="3263" class="javax.swing.JButton" binding="ausgabe_textfeld">
+      <component id="3263" class="javax.swing.JButton" binding="ausgabe_jbutton">
         <constraints>
           <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
