Combobox- Eintrag: Andere Fischart

--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -146,7 +146,7 @@
             <item value="Seeforelle"/>
             <item value="Wels"/>
             <item value="Zander"/>
-            <item value="+ Eigene Fischart hinzufügen"/>
+            <item value="Andere Fischart"/>
           </model>
         </properties>
       </component>
