--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="915" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <font name="Helvetica" style="1"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="eb47b" class="javax.swing.JLabel" binding="fischart_label">
@@ -13,6 +15,7 @@
           <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Fischart"/>
         </properties>
       </component>
@@ -21,6 +24,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Datum"/>
         </properties>
       </component>
@@ -29,6 +33,7 @@
           <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Größe (cm)"/>
         </properties>
       </component>
@@ -37,6 +42,7 @@
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Ort"/>
         </properties>
       </component>
@@ -69,6 +75,7 @@
           <grid row="0" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Gewicht (gramm)"/>
         </properties>
       </component>
@@ -85,6 +92,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Eintragen"/>
         </properties>
       </component>
@@ -93,6 +101,7 @@
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Gefangen?"/>
         </properties>
       </component>
@@ -109,6 +118,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Auswahl löschen"/>
         </properties>
       </component>
@@ -117,6 +127,7 @@
           <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Helvetica" style="1"/>
           <text value="Fangbuch anzeigen"/>
         </properties>
       </component>
@@ -156,7 +167,11 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font name="Helvetica"/>
+          <lineWrap value="true"/>
+          <wrapStyleWord value="true"/>
+        </properties>
       </component>
     </children>
   </grid>
