nurbehalten_jbutton hinzugefügt

--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Fisch_Package.CatchLog">
-  <grid id="27dc6" binding="CatchLog" layout-manager="GridLayoutManager" row-count="5" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="CatchLog" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="915" height="400"/>
@@ -96,13 +96,13 @@
           <text value="Eintragen"/>
         </properties>
       </component>
-      <component id="6bd40" class="javax.swing.JLabel" binding="gefangen_label">
+      <component id="6bd40" class="javax.swing.JLabel" binding="behalten_label">
         <constraints>
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Helvetica" style="1"/>
-          <text value="Gefangen?"/>
+          <text value="Behalten?"/>
         </properties>
       </component>
       <component id="761e3" class="javax.swing.JRadioButton" binding="gefangen_jradiobutton">
@@ -128,7 +128,7 @@
         </constraints>
         <properties>
           <font name="Helvetica" style="1"/>
-          <text value="Fangbuch anzeigen"/>
+          <text value="CatchLog anzeigen"/>
         </properties>
       </component>
       <component id="d3640" class="javax.swing.JComboBox" binding="fischart_combobox">
@@ -171,6 +171,22 @@
           <font name="Helvetica"/>
           <lineWrap value="true"/>
           <wrapStyleWord value="true"/>
+        </properties>
+      </component>
+      <component id="f8761" class="javax.swing.JButton" binding="nurbehalten_jbutton">
+        <constraints>
+          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Nur behaltene Fische anzeigen"/>
+        </properties>
+      </component>
+      <component id="d1fc6" class="javax.swing.JButton" binding="nurZurueckgesetzt_jbutton">
+        <constraints>
+          <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Nur zurückgesetzte Fische anzeigen"/>
         </properties>
       </component>
     </children>
