--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="CatchLog" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="915" height="400"/>
+      <xy x="20" y="20" width="1848" height="321"/>
     </constraints>
     <properties>
       <font name="Helvetica" style="1"/>
@@ -187,6 +187,15 @@
         </constraints>
         <properties>
           <text value="Nur zurückgesetzte Fische anzeigen"/>
+        </properties>
+      </component>
+      <component id="ece0f" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="CatchLog Logo.jpg"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
