--- a/src/main/java/Fisch_Package/CatchLog.form
+++ b/src/main/java/Fisch_Package/CatchLog.form
@@ -175,7 +175,7 @@
           <wrapStyleWord value="true"/>
         </properties>
       </component>
-      <component id="f8761" class="javax.swing.JButton" binding="nurbehalten_jbutton">
+      <component id="f8761" class="javax.swing.JButton" binding="nurBehalten_jbutton">
         <constraints>
           <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
